# mcp-pymilvus-code-generator

./: LICENSE  Makefile  README.md  pyproject.toml
src/: _client.py  evaluation.py
src/mcp-pymilvus-code-generator/: server.py
src/mcp_pymilvus_code_generate_helper/: milvus_connector.py  server.py  sse_server.py  stdio_server.py
src/mcp_pymilvus_code_generate_helper/utils/: generate_eval_data.py  insert_embedding_2_vector_db.py  md_2_embedding.py
src/scripts/evaluation/: _client.py  evaluation.py  generate_eval_data.py
src/scripts/load_doc/: README.md  insert_embedding_2_vector_db.py  md_2_embedding.py  process_docs_to_milvus.py  process_multi_lang_docs_2_vector_db.py
src/scripts/tests/: test_search_similar_documents.py
